--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,15 +25,12 @@
               <% end %>
           <% end %>
           <% if signed_in? %>
-						<li> 
-						<%= link_to "Sticker plakken", new_sticker_path %>
-						</li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Voor
                   Leden <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Leden', users_path %></li>
-									<li><%= link_to "Stickers", stickers_path %></li>
+									<li><%= link_to 'Stickers', stickers_path %></li>
                   <li><%= link_to 'Activiteiten', events_path %></li>
                   <li><%= link_to 'Vergaderingen', meetings_path %></li>
                   <li><%= link_to 'Motie', new_motion_path %></li>
