--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,9 @@
               <% end %>
           <% end %>
           <% if signed_in? %>
+							<li> 
+								<%= link_to "Sticker plakken", new_sticker_path %>
+							</li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Voor
                   Leden <span class="caret"></span></a>
