--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -2,9 +2,6 @@
 	<div id="map" style="height: 100%;"></div>
 </div>
 <hr>
-<div class="button-group">
-  <%= link_to 'Sticker plakken', new_sticker_path, class: 'btn btn-primary btn-block' %>
-</div>
 <script>
 function initMap() {
 	var map = new google.maps.Map(document.getElementById('map'), {
@@ -18,7 +15,7 @@ function initMap() {
 			position: sticker<%= s.id %>,
 			map: map,
 			<% if s.notes.empty? %>
-				title: 'Sticker #<%= s.id %>',
+				title: 'Sticker #<%= s.id %>'
 			<% else %>
 				title: '<%= s.notes %>'
 			<% end %>
