--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -13,6 +13,7 @@ function initMap() {
 		var sticker<%= s.id %> = {lat: <%= s.lat %>, lng: <%= s.lon %>};
 		var marker<%= s.id %> = new google.maps.Marker({
 			position: sticker<%= s.id %>,
+			icon: 'https://drive.google.com/open?id=0B5AFs614rzpQUGx3RG5NX0QzMzA'
 			map: map,
 			<% if s.notes.empty? %>
 				title: 'Sticker #<%= s.id %>'
