--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -1,38 +1,41 @@
 <script type="text/javascript">
-  $(document).ready(function () {
-        $("#sticker").tablesorter();
-      }
-  );
+$(document).ready(function () {
+  $("#sticker").tablesorter();
+}
+);
 </script>
 <table id="sticker" class="tablesorter table table-hover">
   <thead>
-  <tr>
-    <th>datum</th>
-    <th>locatie</th>
-    <th>controls</th>
-  </tr>
+    <tr>
+      <th>datum</th>
+      <th>locatie</th>
+      <th>controls</th>
+    </tr>
   </thead>
   <%= will_paginate %>
   <tbody>
-  <% @stickers.each do |m| %>
+    <% @stickers.each do |m| %>
       <tr>
         <td><%= m.created_at.strftime('%d/%m/%Y %H:%M') %></td>
-				<td><%= "#{m.lat}, #{m.lon}" %><br>
-					<%= JSON.parse(Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyD7NvwdfM68rk7wBS87LK-R8mVSEkynLNM")).body)["results"][0]["formatted_address"] %>
-			</td>
+        <td><%= "#{m.lat}, #{m.lon}" %><br>
+          <% jdata = Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyAz0ENeS5X1Vh9A_-KxxENHBf-qQYB2z-U")) %>
+          <% mdata = JSON.parse(jdata.body) %>   
+          <%= mdata["results"][0]["formatted_address"]
+  
+        </td>
 
-            <td>
-              <div class="btn-group">
-                <%= link_to edit_sticker_path(m), class: 'btn btn-info' do %>
-                    <i class="fa fa-pencil"></i>
-                <% end %>
-                <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
-                    <i class="fa fa-trash"></i>
-                <% end %>
-              </div>
-            </td>
+        <td>
+          <div class="btn-group">
+            <%= link_to edit_sticker_path(m), class: 'btn btn-info' do %>
+              <i class="fa fa-pencil"></i>
+            <% end %>
+            <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
+              <i class="fa fa-trash"></i>
+            <% end %>
+          </div>
+        </td>
       </tr>
-  <% end %>
+    <% end %>
   </tbody>
 </table>
 <%= will_paginate %>
