--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -14,6 +14,7 @@ $(document).ready(function()
       <th>Wie</th>
       <th>Wat</th>
       <th>Waneer</th>
+      <th>Hoe</th>
     </tr>
   </thead>
   <%= will_paginate @trail %>
@@ -33,6 +34,7 @@ $(document).ready(function()
       <td><%= t.event %>d <%= link_to t.item_type + " #" + t.reify(options = {}).id.to_s, t.reify(options = {}) %></td>
       <% end %>
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
+      <td><%= t.changeset %></td>
       </tr>
     <% end %>
   </tbody>
