--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -19,15 +19,15 @@
   <tbody>
   <% @beers.each do |beer| %>
       <% if current_user %>
-  	    <% if beer.reviews.where('user_id = ?', current_user.id).empty? %>
-        	  <tr class="default">
-      	<% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 6 %>
-        	  <tr class="success">
-      	<% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 4 %>
-        	  <tr class="info">
-      	<% else %>
-      	    <tr class="danger">
-      	<% end %>
+          <% if beer.reviews.where('user_id = ?', current_user.id).empty? %>
+              <tr class="default">
+          <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 6 %>
+              <tr class="success">
+          <% elsif beer.reviews.where('user_id = ?', current_user.id).take.rating > 4 %>
+              <tr class="info">
+          <% else %>
+              <tr class="danger">
+          <% end %>
       <% end %>
       <td><%= link_to beer.name, beer %></td>
       <td><%= beer.soort %></td>
@@ -46,5 +46,5 @@
 </table>
 
 <% if current_user %>
-  <%= link_to 'Nieuw bier', new_beer_path, :class => 'btn btn-block btn-primary' %>
+    <%= link_to 'Nieuw bier', new_beer_path, :class => 'btn btn-block btn-primary btn-sm' %>
 <% end %>
