add timestamp to mail

--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -1,6 +1,6 @@
 Hallo <%= @user.name %>,
 
-Helaas ben je er tot op heden niet in geslaagd je aan of af te melden voor het event: "<%= @event.title %>". Om voor iedereen het te verwachte aantal aanwezige leden zo overzichtelijk mogelijk te maken wordt je hierbij verzocht dat zo snel mogelijk nog te doen.
+Helaas ben je er tot op heden niet in geslaagd je aan of af te melden voor het event: "<%= @event.title %>" op <%= @event.date.strftime("%d/%m/%Y") %>. Om voor iedereen het te verwachte aantal aanwezige leden zo overzichtelijk mogelijk te maken wordt je hierbij verzocht dat zo snel mogelijk nog te doen.
 
 Veel succes, moeilijk is het niet
 
