--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -29,9 +29,9 @@ $(document).ready(function()
       <% if t.event == "create" %>
         <td>created <%= t.item_type %></td>
       <% elsif t.event == "destroy"%>
-        <td>destroyed <%= t.item_type + " #" + t.reify(option = {}).id.to_s %></td>
+        <td>destroyed <%= t.item_type + " #" + t.item_id.to_s %></td>
       <% else %>
-      <td><%= t.event %>d <%= link_to t.item_type + " #" + t.reify(options = {}).id.to_s, t.reify(options = {}) %></td>
+      <td><%= t.event %>d <%= t.item_type + " #" + t.item_id.to_s %></td>
       <% end %>
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
       <td><%= t.changeset %></td>
