--- a/app/views/stickers/index.html.erb
+++ b/app/views/stickers/index.html.erb
@@ -25,7 +25,5 @@ function initMap() {
 }
 </script>
 <script async defer
-                src="https://maps.googleapis.com/maps/api/js
-                ?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8
-                &callback=initMap">
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCd7hcvDILgo-1XLUCIKwwmy8vVCNLrLK8&callback=initMap">
 </script>
