--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,22 +24,28 @@
         <p>
         <% @event.signups.where(status: true).each do |s| %>
           <%= s.user.name %><br>
-        <% end %>
-        <% if @event.deadline != nil and @event.deadline > Time.now %>
-          <%= form_for(@event.signups.build(event_id: @event.id, user_id: current_user.id, status: 1)) do |f| %>
-            <div><%= f.hidden_field :event_id %></div>
-            <div><%= f.hidden_field :user_id %></div>
-            <div><%= f.hidden_field :status %></div>
-            <%= f.submit 'Ik zal aanwezig zijn.', class: 'btn btn-success' %>
+          <% if s.reason && s.reason.length > 2 %>
+            <ul style="padding: 10px;margin-top: -20px;margin-bottom: -10px;">
+              <%= s.reason %><br>
+            </ul>
           <% end %>
+      <% end %>
+      <% if @event.deadline != nil and @event.deadline > Time.now %>
+        <%= form_for(@event.signups.build(event_id: @event.id, user_id: current_user.id, status: 1)) do |f| %>
+          <div><%= f.hidden_field :event_id %></div>
+          <div><%= f.hidden_field :user_id %></div>
+          <div><%= f.hidden_field :status %></div>
+          <%= f.submit 'Ik zal aanwezig zijn.', class: 'btn btn-success' %>
+          <div style="padding-top: 5px;"><%= f.text_field :reason, placeholder: "Opmerkingen?" %></div>
         <% end %>
+      <% end %>
         </p>
         <hr>
 
         <h4>Afwezig(<%= @event.signups.where(status: false).count %>):</h4>
         <p>
         <% @event.signups.where(status: false).each do |s| %>
-          <%= s.user.name %> 
+          <%= s.user.name %>
           <% if s.reason && s.reason.length > 1 %>(<%= s.reason %>)<% end %><br>
         <% end %>
         <% if @event.deadline != nil and @event.deadline > Time.now %>
