--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
           <% unless signed_in? %>
             <li><%= link_to 'Leden', public_leden_path %> </li>
             <li><%= link_to 'Bieren', beers_path %></li>
+            <li><%= link_to 'Blog', blogitems_path %></li>
           <% end %>
           <% PublicPage.all.each do |pp| %>
               <% if pp.public %>
@@ -39,6 +40,7 @@
                   <li><%= link_to 'Vergaderingen', meetings_path %></li>
                   <li><%= link_to 'Motie', new_motion_path %></li>
                   <li><%= link_to 'Nieuws', news_index_path %></li>
+                  <li><%= link_to 'Blog', blogitems_path %></li>
                   <li><%= link_to 'Bier', beers_path %></li>
                   <li><%= link_to 'Statistieken', stats_path %></li>
                   <li><%= link_to 'Bijnamen', nicknames_path %></li>
