--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,11 +15,12 @@
             <section style="overflow: visible;">
               <%= render 'shared/quote_form' %>
             </section>
-            <% if current_user.lid? %>
-                <section>
-                  <%= render 'shared/activiteiten' %>
-                </section>
-            <% end %>
+            <section>
+              <%= render 'shared/activiteiten' %>
+            </section>
+            <section>
+              <%= render 'shared/blog' %>
+            </section>
           </aside>
         </div>
         <div class="col-md-8">
