--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -3,13 +3,20 @@
   <div class="row">
     <div class="col-md-9 cta-contents">
       <h1 class="cta-title"><%= item.title %></h1>
-      <div class="cta-desc">
-        <p><%= markdown truncate(item.body, length: 500).html_safe %></p>
-      </div>
+	<div class="cta-desc">
+	  <p><%= markdown truncate(item.body, length: 500).html_safe %></p>
+	</div>
     </div>
     <div class="col-md-3 cta-button">
       <%= link_to "Lees", item, class: "btn btn-lg btn-block btn-default" %>
     </div>
   </div>
 </div>
+<% end %>
+<% if !@items.any? %>
+  <% if signed_in? %>
+    <h4> Helaas, er zijn (nog) geen blogposts. </h4>
+  <% else %>
+    <h4> Helaas, er zijn (nog) geen publieke blogposts. </h4>
+  <% end %>
 <% end %>
