Better rails code style

--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -14,11 +14,11 @@
 </div>
 <% end %>
 <% if current_user&.lid? || current_user&.alid? %>
-  <% if !@items.any? %>
+  <% unless @items.any? %>
     <h4> Helaas, er zijn (nog) geen blogposts. </h4>
   <% end %>
   <%= link_to 'Schrijf een blogpost!', new_blogitem_path, class: 'btn btn-block btn-primary' %>
-<% else if !@items.any? %>
+<% else unless @items.any? %>
   <h4> Helaas, er zijn (nog) geen publieke blogposts. </h4>
 <% end %>
 <% end %>
