--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <%= f.label :title %><br>
-      <%= f.text_field :title, class: 'form-control' %>
+      <%= f.text_field :title, class: 'form-control', required: true, minlength: 2%>
     </div>
     <div class="form-group">
       <%= f.label :public %><br>
