--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -43,7 +43,7 @@
       </tbody>
     </table>
     <%= will_paginate %>
-    <% if lid? || alid? %>
+    <% if current_user.lid? || current_user.alid? %>
         <%= link_to 'Nieuwe activiteit', new_event_path, class: 'btn btn-block btn-primary' %>
     <% end %>
   </div>
