--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -1,14 +1,7 @@
 <% content_for :title do %>
   Trail
 <% end %>
-<script type="text/javascript">
-$(document).ready(function()
-    {
-      $("#motion").tablesorter();
-    }
-    );
-</script>
-<table id="motion" class="tablesorter table table-hover">
+<table id="trail" class="tablesorter table table-hover">
   <thead>
     <tr>
       <th>Wie</th>
@@ -22,16 +15,16 @@ $(document).ready(function()
     <% @trail.each do |t| %>
       <tr>
         <td><% if t.whodunnit %>
-          <%= User.find(t.whodunnit).name %>
+          <%= link_to User.find(t.whodunnit).name, User.find(t.whodunnit) %>
         <% else %>
           System </td>
       <% end %>
       <% if t.event == "create" %>
-        <td>created <%= t.item_type %></td>
+        <td>created <%= link_to t.item_type, t.item %></td>
       <% elsif t.event == "destroy"%>
         <td>destroyed <%= t.item_type + " #" + t.item_id.to_s %></td>
       <% else %>
-      <td><%= t.event %>d <%= t.item_type + " #" + t.item_id.to_s %></td>
+      <td><%= t.event %>d <%= link_to t.item_type + " #" + t.item_id.to_s, t.item %></td>
       <% end %>
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
       <td><%= t.changeset %></td>
