--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
                 <li><%= link_to 'Activiteiten', events_path %></li>
                 <li><%= link_to 'Vergaderingen', meetings_path %></li>
                 <li><%= link_to 'Motie', new_motion_path %></li>
-                <li><%= link_to 'Notes', notes_path %></li>
+                <li><%= link_to 'Notities', notes_path %></li>
                 <li><%= link_to 'Nieuws', news_index_path %></li>
                 <li><%= link_to 'Blog', blogitems_path %></li>
                 <li><%= link_to 'Bier', beers_path %></li>
