feature voor de frontpage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,6 +19,9 @@
               <%= render 'shared/activiteiten' %>
             </section>
             <section>
+              <%= render 'shared/trail' %>
+            </section>
+            <section>
               <%= render 'shared/blog' %>
             </section>
           </aside>
