--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -37,7 +37,7 @@
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
       <td>
         <% t.changeset.each do |c,v| %>
-          <%= c.to_s + ": " + v[1].to_s  %><br>
+          <%= raw c.to_s + ": " + Diffy::Diff.new(v[0], v[1]).to_s(:html_simple)  %><br>
         <% end %>
       </td>
       </tr>
