--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,9 +26,12 @@
     </section>
     <section>
       <% if @user.lid? %>
-        <% @user.missed_drinks.each do |md| %>
-          <%= link_to md.date.strftime("%d/%m/%Y"), md %><br>
-        <% end %>
+	<% if @user.missed_drinks.length > 0 %>
+	  <b>Gemiste Zondagborrels</b><br>
+	  <% @user.missed_drinks.each do |md| %>
+	    <%= link_to md.date.strftime("%d/%m/%Y"), md %><br>
+	  <% end %>
+	<% end %>
       <% end %>
     </section>
   </aside>
