--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -35,7 +35,7 @@
               <td><%= beer.brewer %></td>
               <td><%= beer.country %></td>
               <td><%= beer.reviews.count %></td>
-              <%= if current_user %>
+              <% if current_user %>
               <td>
                 <%= link_to 'Verwijder', beer, class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
               </td>
