--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,6 +38,7 @@
                 <li><%= link_to 'Stickers', stickers_path %></li>
                 <li><%= link_to 'Activiteiten', events_path %></li>
                 <li><%= link_to 'Vergaderingen', meetings_path %></li>
+                <li><%= link_to 'Log', trail_path %></li>
                 <li><%= link_to 'Motie', new_motion_path %></li>
                 <li><%= link_to 'Notities', notes_path %></li>
                 <li><%= link_to 'Nieuws', news_index_path %></li>
@@ -55,7 +56,6 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Groepen', groups_path %></li>
-                  <li><%= link_to 'Papertrail', trail_path %></li>
                   <li><%= link_to 'Moties', motions_path %></li>
                   <li><%= link_to 'Openbare Paginas', public_pages_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
