--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Trail
+  Log
 <% end %>
 <table id="trail" class="tablesorter table table-hover">
   <thead>
@@ -21,23 +21,26 @@
       <% end %>
       <% if t.event == "create" %>
         <td>created <%= link_to t.item_type, t.item %></td>
-      <% elsif t.event == "destroy"%>
+      <% elsif t.event == "destroy" %>
         <td>destroyed <%= t.item_type + " #" + t.item_id.to_s %>
-        <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
+        <% if current_user&.admin? %><%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
           <%= f.submit "Revert" %>
         <% end %>
-      </td>
+      <% end %>
+        </td>
       <% else %>
-      <td><%= t.event %>d <%= link_to t.item_type + " #" + t.item_id.to_s, t.item %>
+        <td><%= t.event %>d <%= link_to t.item_type + " #" + t.item_id.to_s, t.item %>
+        <% if current_user&.admin? %>
         <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
           <%= f.submit "Revert" %>
         <% end %>
-      </td>
+      <% end %>
+        </td>
       <% end %>
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
       <td>
         <% t.changeset.each do |c,v| %>
-          <%= raw c.to_s + ": " + Diffy::Diff.new(v[0], v[1]).to_s(:html)  %><br>
+          <%= raw c.to_s + ": " + Diffy::Diff.new(v[0], v[1]).to_s(:html) %><br>
         <% end %>
       </td>
       </tr>
