--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -23,18 +23,15 @@
         <td>created <%= link_to t.item_type, t.item %></td>
       <% elsif t.event == "destroy" %>
         <td>destroyed <%= t.item_type + " #" + t.item_id.to_s %>
-        <% if current_user&.admin? %><%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
-          <%= f.submit "Revert" %>
-        <% end %>
-      <% end %>
-        </td>
-      <% else %>
-        <td><%= t.event %>d <%= link_to t.item_type + " #" + t.item_id.to_s, t.item %>
-        <% if current_user&.admin? %>
         <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
           <%= f.submit "Revert" %>
         <% end %>
-      <% end %>
+        </td>
+      <% else %>
+        <td><%= t.event %>d <%= link_to t.item_type + " #" + t.item_id.to_s, t.item %>
+        <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
+          <%= f.submit "Revert" %>
+        <% end %>
         </td>
       <% end %>
       <td><%= time_ago_in_words(t.created_at) %> geleden.</td>
