--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,9 @@
     <% if @event.location != nil and @event.location.length > 1 %>
       <p><i class="fa fa-map-marker"></i> <%= @event.location %></p>
     <% end %>
-    <p><%= simple_format(@event.beschrijving) %></p>
+    <p>
+    <%= markdown(@event.beschrijving).html_safe %>
+    </p>
   </div>
   <div class="col-md-4">
     <div class="panel panel-default">
