--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,17 +21,15 @@
             <td><%= link_to event.title, event %></td>
             <td><%= event.date.strftime('%d/%m/%Y') %>
             <td>
-              <% event.signups.where(status: true).each_with_index do |s, index| %>
+              <% event.signups.with_user.where(status: true).each_with_index do |s, index| %>
                   <%= s.user.name + ',' %>
               <% end %>..jij?
             </td>
             <td>
               <div class="btn-group" style="display: inline-block">
-                <% if current_user == event.user or current_user.admin? or current_user.schrijf_feut? %>
                     <%= link_to edit_event_path(event), :class => 'btn btn-info' do %>
                         <i class="fa fa-pencil"></i>
                     <% end %>
-                <% end %>
                 <% if current_user.admin? %>
                     <%= link_to event, method: :delete, data: {confirm: 'Weet je het zeker?'}, :class => 'btn btn-danger' do %>
                         <i class="fa fa-trash"></i>
@@ -43,7 +41,7 @@
       </tbody>
     </table>
     <%= will_paginate %>
-    <% if current_user.lid? || current_user.alid? %>
+    <% if current_user&.active? %>
         <%= link_to 'Nieuwe activiteit', new_event_path, class: 'btn btn-block btn-primary' %>
     <% end %>
   </div>
