--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -14,7 +14,7 @@
 
     <div class="form-group">
       <%= f.label :body %><br>
-      <%= f.text_area :body, class: 'form-control', rows: 20 %>
+      <%= f.trix_editor :body, class: 'form-control' %>
     </div>
     <div class="form-group">
       <%= f.label :title %><br>
