--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,16 +49,25 @@
                 <% if current_user.brouwer? %><li><%= link_to 'Brouwerij', "http://brewery.zondersikkel.nl/" %></li><% end %>
               </ul>
             </li>
-            <% if current_user.admin? %>
+            <% if current_user&.admin? %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Triumviraat
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Groepen', groups_path %></li>
                   <li><%= link_to 'Moties', motions_path %></li>
                   <li><%= link_to 'Openbare Paginas', public_pages_path %></li>
+                </ul>
+              </li>
+            <% end %>
+            <% if current_user.dev? %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer
+                  <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
+                  <li><%= link_to 'Anonymize', anonymize_path %></li>
                 </ul>
               </li>
             <% end %>
