--- a/app/views/shared/_random_quote.html.erb
+++ b/app/views/shared/_random_quote.html.erb
@@ -1,10 +1,10 @@
 <% if !@rQuote.nil? %>
-  <%= link_to gravatar_for(@rQuote.user), @rQuote.user, class: 'gravatar img img-responsive' %>
+  <%= link_to gravatar_for(@random_quote.user), @random_quote.user, class: 'gravatar img img-responsive' %>
   <span class="user">
-     <%= link_to @rQuote.user.name, @rQuote.user %>
+     <%= link_to @random_quote.user.name, @random_quote.user %>
   </span>
-  <span class="content"><%= @rQuote.text %></span>
+  <span class="content"><%= @random_quote.text %></span>
   <span class="timestamp">
-     <%= time_ago_in_words(@rQuote.created_at) %> geleden.
+     <%= time_ago_in_words(@random_quote.created_at) %> geleden.
   </span>
 <% end %>
