batch kan geupdate worden in  aparte admin interface

--- a/app/views/users/usergroups.html.erb
+++ b/app/views/users/usergroups.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.admin? %>
-  <h1>Groepen</h1>
+  <h1>Usergroepen van <%= @user.name %></h1>
   <ul>
     <% @usergroups.each do |group| %>
       <li>
