--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,6 +55,7 @@
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Groepen', groups_path %></li>
+                  <li><%= link_to 'Leden Administratie', leden_admin_path %></li>
                   <li><%= link_to 'Moties', motions_path %></li>
                   <li><%= link_to 'Externe Accounts', external_accounts_path %></li>
                   <li><%= link_to 'Openbare Paginas', public_pages_path %></li>
