--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,8 +21,12 @@
       <% if @user.lid? %>
         Sunday Ratio: <%= @user.sunday_ratio.round(2) %>%<br>
       <% end %>
-      Ingelogt op: <br><%= @user.current_sign_in_at.strftime("%d/%m/%Y %H:%M") %> (<%= @user.current_sign_in_ip %>)<br>
-      Laatste login op: <br><%= @user.last_sign_in_at.strftime("%d/%m/%Y %H:%M") %> (<%= @user.last_sign_in_ip %>)<br>
+      <% if @user.current_sign_in_at %>
+        Ingelogt op: <br><%= @user.current_sign_in_at.strftime("%d/%m/%Y %H:%M") %> (<%= @user.current_sign_in_ip %>)<br>
+      <% end %>
+      <% if @user.last_sign_in_at %>
+        Laatste login op: <br><%= @user.last_sign_in_at.strftime("%d/%m/%Y %H:%M") %> (<%= @user.last_sign_in_ip %>)<br>
+      <% end %>
     </section>
     <section>
       <% if @user.lid? %>
