--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,6 +67,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Developer
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to 'OAuth Applicaties', oauth_applications_path %></li>
                   <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
                   <li><%= link_to 'Anonymize', anonymize_path %></li>
@@ -79,6 +80,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to 'Mijn Profiel', current_user %></li>
                 <li><%= link_to 'Mijn Stickers', personal_sticker_path %></li>
+                <li><%= link_to 'Mijn Authorisaties', oauth_authorized_applications_path %></li>
                 <li><%= link_to 'Instellingen', edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
