--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -68,6 +68,7 @@
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><%= link_to 'OAuth Applicaties', oauth_applications_path %></li>
+                  <li><%= link_to 'API Docs', '/api_docs' %></li>
                   <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
                   <li><%= link_to 'Anonymize', anonymize_path %></li>
