--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,7 +71,7 @@
                   <li><%= link_to 'API Docs', '/api_docs' %></li>
                   <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
-                  <li><%= link_to 'Anonymize', anonymize_path %></li>
+                  <li><%= link_to 'Anonymize', anonymize_path, data: {confirm: 'Het is een tyfuswerk om dit ongedaan te maken dus weet je het zeker?'} %></li>
                 </ul>
               </li>
             <% end %>
