--- a/app/views/static_pages/statistics.html.erb
+++ b/app/views/static_pages/statistics.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 text-center">
     <h2> Landen vanuit waar we bezocht zijn. </h2>
-    <%= pie_chart @visitCounties %>
+    <%= pie_chart @visitCountries %>
   </div>
   <div class="col-md-6 text-center">
     <h3> Visit OS's </h3>
@@ -18,7 +18,7 @@
   </div>
   <div class="col-md-6 text-center">
     <h3> Referrer </h3>
-    <%= pie_char @visitReferrer %>
+    <%= pie_chart @visitReferrer %>
   </div>
 </div>
 <div class="row">
